OpenConceptLab/ocl_issues#985 | fixing page results component flicker

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -962,3 +962,7 @@ div.custom-attributes-accordion-content {
         display: none;
     }
 }
+.page-results-popper {
+    z-index: 2;
+    position: absolute;
+}
